project(map)

include_directories(
  ${OMIM_ROOT}/3party/protobuf/protobuf/src
  ${OMIM_ROOT}/3party/freetype/include
  ${OMIM_ROOT}/3party/jansson/src
  ${OMIM_ROOT}/3party/glm
)

set(
  SRC
  ../api/src/c/api-client.c
  address_finder.cpp
  api_mark_point.cpp
  api_mark_point.hpp
  benchmark_tools.hpp
  benchmark_tools.cpp
  bookmark_manager.cpp
  bookmark_manager.hpp
  bookmark.cpp
  bookmark.hpp
  chart_generator.cpp
  chart_generator.hpp
  displacement_mode_manager.cpp
  displacement_mode_manager.hpp
  displayed_categories_modifiers.cpp
  displayed_categories_modifiers.hpp
  everywhere_search_params.hpp
  feature_vec_model.cpp
  feature_vec_model.hpp
  framework.cpp
  framework.hpp
  ge0_parser.cpp
  ge0_parser.hpp
  geourl_process.cpp
  geourl_process.hpp
  gps_track_collection.cpp
  gps_track_collection.hpp
  gps_track_filter.cpp
  gps_track_filter.hpp
  gps_track_storage.cpp
  gps_track_storage.hpp
  gps_track.cpp
  gps_track.hpp
  gps_tracker.cpp
  gps_tracker.hpp
  local_ads_manager.cpp
  local_ads_manager.hpp
  local_ads_mark.cpp
  local_ads_mark.hpp
  local_ads_supported_types.cpp
  mwm_url.cpp
  mwm_url.hpp
  place_page_info.cpp
  place_page_info.hpp
  reachable_by_taxi_checker.cpp
  reachable_by_taxi_checker.hpp
  routing_manager.cpp
  routing_manager.hpp
  routing_mark.cpp
  routing_mark.hpp
  search_api.cpp
  search_api.hpp
  search_mark.cpp
  search_mark.hpp
  taxi_delegate.cpp
  taxi_delegate.hpp
  track.cpp
  track.hpp
  traffic_manager.cpp
  traffic_manager.hpp
  user.cpp
  user.hpp
  user_mark_container.cpp
  user_mark_container.hpp
  user_mark.cpp
  user_mark.hpp
  viewport_search_params.hpp
)

add_library(${PROJECT_NAME} ${SRC})

omim_add_test_subdirectory(map_tests)
omim_add_test_subdirectory(mwm_tests)
omim_add_test_subdirectory(style_tests)
